--- a/testng-automation01_swaglabs/test-output/emailable-report.html
+++ b/testng-automation01_swaglabs/test-output/emailable-report.html
@@ -8,11 +8,18 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">4,862</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">Test-0</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">32,016</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Test-1</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">42,034</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Test-2</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">64,349</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">138,399</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testScript.SwagLabsTest</td><td><a href="#m0">testAddItemsAndCheckout</a></td><td rowspan="1">1750916147764</td><td rowspan="1">1324</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test-0 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testScript.SwagLabsTest</td><td><a href="#m0">testAddItemsAndCheckout</a></td><td rowspan="1">1751177977199</td><td rowspan="1">6290</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Test-1 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testScript.SwagLabsTest</td><td><a href="#m1">testAddItemsAndCheckout</a></td><td rowspan="1">1751177981664</td><td rowspan="1">6422</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Test-2 &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testScript.SwagLabsTest</td><td><a href="#m2">testAddItemsAndCheckout</a></td><td rowspan="1">1751178000640</td><td rowspan="1">13020</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">testScript.SwagLabsTest#testAddItemsAndCheckout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test-0</h2><h3 id="m0">testScript.SwagLabsTest#testAddItemsAndCheckout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test-1</h2><h3 id="m1">testScript.SwagLabsTest#testAddItemsAndCheckout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test-2</h2><h3 id="m2">testScript.SwagLabsTest#testAddItemsAndCheckout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
